--- a/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html
+++ b/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html
@@ -209,15 +209,21 @@
                     <div class="selection-options" id="mealOptions">
                         <div class="option" onclick="selectOption('Burger', this)">
                             <span>Bacon</span>
-                            <span class="price">+$0.00</span>
+                            <div class="priceItemDetail">
+                              <span class="price">+$0.00</span>
+                            </div>
                         </div>
                         <div class="option" onclick="selectOption('Pizza', this)">
                             <span>Sausage</span>
-                            <span class="price">+$0.00</span>
+                            <div class="priceItemDetail">
+                              <span class="price">+$0.00</span>
+                            </div>
                         </div>
                         <div class="option" onclick="selectOption('Salad', this)">
                             <span>Ham</span>
-                            <span class="price">+$0.00</span>
+                            <div class="priceItemDetail">
+                              <span class="price">+$0.00</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -235,15 +241,22 @@
                   <div class="selection-options" id="mealOptions">
                       <div class="option" onclick="selectOption('Burger', this)">
                           <span>Served on Toasted Bagel</span>
-                          <span class="price">+$0.00</span>
+                          <div class="priceItemDetail">
+                            <span class="price">+$0.00</span>
+                          </div>
+                         
                       </div>
                       <div class="option" onclick="selectOption('Pizza', this)">
                           <span>Served on Croissant</span>
-                          <span class="price">+$0.00</span>
+                          <div class="priceItemDetail">
+                            <span class="price">+$0.00</span>
+                          </div>
                       </div>
                       <div class="option" onclick="selectOption('Salad', this)">
                           <span>Served on Flour Wrap</span>
-                          <span class="price">+$0.00</span>
+                          <div class="priceItemDetail">
+                            <span class="price">+$0.00</span>
+                          </div>
                       </div>
                   </div>
               </div>
@@ -262,15 +275,21 @@
                   <div class="selection-options" id="drinkOptions">
                       <div class="option" onclick="toggleMultiSelection('Coke', this)">
                           <span>Coke</span>
-                          <span class="price">+$2.00</span>
+                          <div class="priceItemDetail">
+                            <span class="price">+$2.00</span>
+                          </div>
                       </div>
                         <div class="option" onclick="toggleMultiSelection('Pepsi', this)">
                             <span>Pepsi</span>
-                            <span class="price">+$2.00</span>
+                            <div class="priceItemDetail">
+                              <span class="price">+$2.00</span>
+                            </div>
                         </div>
                         <div class="option" onclick="toggleMultiSelection('Fanta', this)">
                             <span>Fanta</span>
-                            <span class="price">+$2.00</span>
+                            <div class="priceItemDetail">
+                              <span class="price">+$2.00</span>
+                            </div>
                         </div>
                     </div>
                 </div>
