--- a/pages/checkout-catering.html
+++ b/pages/checkout-catering.html
@@ -159,20 +159,21 @@ body {
 }
 
 .container {
-    max-width: 100%;
-    padding: 20px;
+    width: 100%;
+    padding: 20px 0px;
+    background-color: #007bff;
 }
 
 .card {
-    background: #fff;
+    background: #b4b4b4;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 20px 0px;
     margin-bottom: 20px;
 }
 
 /* Additional Mobile Responsive CSS */
 .card {
-    width: 100%;
+    width: 90%;
 }
 
 /* Media Query for larger screens */
@@ -191,7 +192,7 @@ body {
     background: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    padding: 15px;
+    padding: 15px 0px;
     margin-bottom: 10px;
 }
 
