--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
 
-  <title>Delivery v3</title>
+  <title>Delivery v3</title> 
 
 </head>
 <body>
@@ -542,10 +542,10 @@ width: 52%;
     }
 
     document.addEventListener("DOMContentLoaded", function () {
-        // Mostrar el popup después de un tiempo (por ejemplo, 5 segundos)
-        setTimeout(showPopup, 5000);
+      // Show the popup after a time ( 1 second)
+        setTimeout(showPopup, 1000);
         
-        // Cerrar el popup al hacer clic fuera del cuadro del popup
+      // Close the popup when clicking outside the popup box
         document.getElementById("popup-container").addEventListener("click", function (event) {
             if (event.target.id === "popup-container") {
                 hidePopup();
